--- a/lesson-4/index.html
+++ b/lesson-4/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="wrapper">
     <div class="container">
       <div class="main-heading">About Minions</div>
     </div>
@@ -81,5 +82,6 @@
         <div class="button">Read more</div>
       </div>
     </div>
+  </div>
   </body>
 </html>
