--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <nav class="navigation">
+      <nav class="navigation">
+        <div class="container">
           <ul class="nav-list">
             <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
             <li class="nav-item">
@@ -19,50 +19,55 @@
             <li class="nav-item"><a href="#" class="nav-link">Quiz</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Support</a></li>
           </ul>
-        </nav>
-      </div>
+        </div>
+      </nav>
     </header>
 
-    <div class="container">
-      <div class="wrapper-header">
-        <div class="header-content-text">
-          <h1 class="header-content-title">
-            Your journey to better credit starts here
-          </h1>
-          <div class="header-content-description">
-            <p>
-              Think the credit system is stacked against you? So do we. We'll
-              help you get the credit you deserve.
-            </p>
-          </div>
-        </div>
-        <div class="header-content-img">
-          <img src="girl.png" alt="girl-with-cards" />
-        </div>
+    <div class="header-content-main">
+      <div class="container">
         <div class="wrapper-header">
-          <form class="input-field" action="#">
-            <div class="input-group">
-              <input type="text" placeholder="" />
-              <button type="submit">Get Apps</button>
+          <div class="header-content-text">
+            <h1 class="header-content-title">
+              Your journey to better credit starts here
+            </h1>
+            <div class="header-content-description">
+              <p>
+                Think the credit system is stacked against you? So do we. We'll
+                help you get the credit you deserve.
+              </p>
             </div>
-          </form>
+          </div>
+          <div class="input-search">
+            <form class="input-field" action="#">
+              <div class="input-group">
+                <input type="text" placeholder="" />
+                <button type="submit">Get Apps</button>
+              </div>
+            </form>
+          </div>
+          <div class="header-content-img">
+            <img src="girl.png" alt="girl-with-cards" />
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="header-step">
-        <div class="container">
-          <h3>STEP 1</h3>
-        </div>
+    <div class="header-step">
+      <div class="container">
+        <h3>STEP 1</h3>
       </div>
-      <div class="header-choose-product">
-        <h2>Choose your product</h2>
-      </div>
+    </div>
+
+    <div class="header-choose-product">
+      <h2>Choose your product</h2>
     </div>
 
     <main class="main">
-      <div class="container">Hello</div>
+      <div class="container">
+        <div class="main-content-img">
+          <img src="cash-offer.png" alt="cash-offer" />
+        </div>
+      </div>
     </main>
   </body>
 </html>
