added changes to lesson 6

--- a/lesson-6/index.html
+++ b/lesson-6/index.html
@@ -382,11 +382,12 @@
         </div>
       </div>
       <div class="footer-contacts">
-        <div class="line"></div> 
         <div class="container">
           <div class="line"></div> 
           <div class="footer-final">
-            <img src="copyright-footer.png" alt="amazon img">
+            <div class="footer-logo">
+              <img src="copyright-footer.png" alt="amazon img">
+            </div>
             <div class="copyright-text">
               <p>Copyright © 2021 Gitpod</p>
             </div>
