--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -31,19 +31,19 @@
               Your journey to better credit starts here
             </h1>
             <div class="header-content-description">
-              <p>
-                Think the credit system is stacked against you? So do we. We'll
-                help you get the credit you deserve.
+              <p class="header-content-credit">
+                Think the credit system is stacked against you? So do we. <br />
+                We'll help you get the credit you deserve.
               </p>
-            </div>
-          </div>
-          <div class="input-search">
-            <form class="input-field" action="#">
-              <div class="input-group">
-                <input type="text" placeholder="" />
-                <button type="submit">Get Apps</button>
+              <div class="input-search">
+                <form class="input-field" action="#">
+                  <div class="input-group">
+                    <input type="text" placeholder="" />
+                    <button type="submit">Get App</button>
+                  </div>
+                </form>
               </div>
-            </form>
+            </div>
           </div>
           <div class="header-content-img">
             <img src="girl.png" alt="girl-with-cards" />
@@ -59,7 +59,7 @@
     </div>
 
     <div class="header-choose-product">
-      <h2>Choose your product</h2>
+      <h2 class="header-choose-product-title">Choose your product</h2>
     </div>
 
     <main class="main">
@@ -67,7 +67,128 @@
         <div class="main-content-img">
           <img src="cash-offer.png" alt="cash-offer" />
         </div>
+        <div class="main-header">
+          <h2 class="main-header-description">Get started with</h2>
+          <div class="main-text">
+            <p class="main-text-desription-two">
+              Empower <br />Cash<br />
+              Advance*
+            </p>
+            <ul class="main-list">
+              <li class="main-list-item">
+                <img class="ckeck-image" src="check.png" alt="check" />
+                <span class="check-text">Receive up to $250 today</span>
+              </li>
+              <li class="main-list-item">
+                <img class="ckeck-image" src="check.png" alt="check" />
+                <span class="check-text"
+                  >No interest, no late fees, no credit checks</span
+                >
+              </li>
+              <li class="main-list-item">
+                <img class="ckeck-image" src="check.png" alt="check" />
+                <span class="check-text">Instant delivery</span>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </main>
+
+    <div class="header-step">
+      <div class="container">
+        <h3>STEP 2</h3>
+      </div>
+    </div>
+
+    <div class="header-choose-product">
+      <h2 class="header-choose-product-title">
+        Choose where to <br />deposit your cash
+      </h2>
+    </div>
+
+    <div class="section-two">
+      <div class="container">
+        <div class="section-two-img">
+          <img src="cards.png" alt="cards" />
+        </div>
+        <div class="section-two-header">
+          <div class="button">
+            <a href="#" class="button-link">
+              <button class="button-one-section-two">RECOMMENDED</button>
+            </a>
+          </div>
+          <h2 class="section-two-header-description">Empower Card</h2>
+          <div class="section-two-text">
+            <p class="section-two-text-description">
+              Open a debit card account through Empower with no <br />
+              overdraft fees
+            </p>
+          </div>
+          <ul class="section-two-list">
+            <li class="section-two-list-item">
+              <img class="ckeck-image" src="check.png" alt="check" />
+              <span class="check-text"
+                >Get free instant delivery of your <br />
+                Empower Cash Advance</span
+              >
+            </li>
+            <li class="main-list-item">
+              <img class="ckeck-image" src="check.png" alt="check" />
+              <span class="check-text">Get paid up to 2 days faster**</span>
+            </li>
+            <li class="main-list-item">
+              <img class="ckeck-image" src="check.png" alt="check" />
+              <span class="check-text">Score cashback up to 10%^^</span>
+            </li>
+          </ul>
+          <div class="button">
+            <a href="#" class="button-link">
+              <button class="button-two-section-two">READ MORE</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-section-left">
+          <p class="footer-description">
+            ® The Empower name and logos are <br />
+            trademarks and service marks (collectively, the <br />
+            “Empower Trademarks”) owned by Empower <br />
+            Finance, Inc. You do not acquire a license or <br />
+            any ownership rights to any trademarks, service <br />
+            marks, or trade names through your access or
+            <br />use of the Empower app or platform product or<br />
+            service.
+          </p>
+        </div>
+        <div class="footer-right-section">
+          <ul class="footer-list-one">
+            <li class="footer-item">About Us</li>
+            <li class="footer-item">Customer Stories</li>
+            <li class="footer-item">Careers</li>
+            <li class="footer-item">Quiz</li>
+            <li class="footer-item">Support</li>
+          </ul>
+        </div>
+        <div class="footer-right-section-two">
+          <ul class="footer-list-one">
+            <li class="footer-item">Legal</li>
+            <li class="footer-item">Terms of Service</li>
+            <li class="footer-item">Privacy</li>
+          </ul>
+        </div>
+        <div class="footer-right-section-three">
+          <ul class="footer-list-one">
+            <li class="footer-item">TikTok</li>
+            <li class="footer-item">Instagram</li>
+            <li class="footer-item">Twitter</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
