--- a/graduation-two/index.html
+++ b/graduation-two/index.html
@@ -90,9 +90,72 @@
         </main>
       </div>
     </header>
+    
     <footer class="footer">
       <div class="container">
-        
+        <div class="footer-left-box">
+          <ul class="left-box-list">
+            <li class="left-box-item">
+              <img src="img/storefront.png" class="nav_logo_img" alt="store" />
+            <span class="nav-logo-name">NFT</span>
+            <span class="nav-logo-name">Marketplace</span>
+            </li>
+            <li class="left-box-item">
+              <p class="left-text-one">
+                NFT marketplace UI created <br> with Anima for Figma.
+              </p>
+            </li>
+            <li class="left-box-item">
+              <p class="left-text-two">
+                Join our community
+              </p>
+            </li>
+            <li class="left-box-item">
+              <img src="img/discord-logo.png" alt="discord logo" class="footer-discord" />
+              <img src="img/youtube-logo.png" alt="youtube logo" class="footer-youtube" />
+              <img src="img/twitter-logo.png" alt="twitter logo" class="footer-twitter" />
+              <img src="img/instagram-logo.png" alt="instagram logo" class="footer-instagram" />
+            </li>
+          </ul>
+        </div>
+        <div class="footer-middle-box">
+          <ul class="middle-box-list">
+            <li class="middle-box-item">
+              <p class="middle-text-header">
+                Explore
+              </p>
+            </li>
+            <li class="middle-box-item">
+              <p class="middle-text-one">
+                Marketplace
+              </p>
+            </li>
+            <li class="middle-box-item">
+              <p class="middle-text-two">
+                Rankings
+              </p>
+            </li>
+            <li class="middle-box-item">
+              <p class="middle-text-three">
+                Connect a wallet
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-right-box">
+          <ul class="right-box-list">
+            <li class="right-box-item">
+              <p class="right-text-header">
+                Join our weekly digest
+              </p>
+            </li>
+            <li class="right-box-item">
+              <p class="right-text-one">
+                Get exclusive promotions & updates <br> straight to your inbox.
+              </p>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
