--- a/graduation-two/index.html
+++ b/graduation-two/index.html
@@ -156,7 +156,7 @@
           <div class="footer-right-box">
             <ul class="right-box-list">
               <li class="right-box-item">
-                <p class="right-text-header">Join our weekly digest</p>
+                <p class="right-text-header">Join Our Weekly Digest</p>
               </li>
               <li class="right-box-item">
                 <p class="right-text-one">
