added changes to work 2

--- a/graduation-two/index.html
+++ b/graduation-two/index.html
@@ -105,35 +105,27 @@
                 <span class="footer-logo-name">Marketplace</span>
               </li>
               <li class="left-box-item">
-                <p class="left-text-one">
+                <a href="#" class="left-text-one">
                   NFT marketplace UI created <br />
                   with Anima for Figma.
-                </p>
+                </a>
               </li>
               <li class="left-box-item">
-                <p class="left-text-two">Join our community</p>
+                <a href="#" class="left-text-two">Join our community</a>
               </li>
               <li class="left-box-item">
-                <img
-                  src="img/discord-logo.png"
-                  alt="discord logo"
-                  class="footer-discord"
-                />
-                <img
-                  src="img/youtube-logo.png"
-                  alt="youtube logo"
-                  class="footer-youtube"
-                />
-                <img
-                  src="img/twitter-logo.png"
-                  alt="twitter logo"
-                  class="footer-twitter"
-                />
-                <img
-                  src="img/instagram-logo.png"
-                  alt="instagram logo"
-                  class="footer-instagram"
-                />
+                <a href="#"><img src="img/discord-logo.png" 
+                  alt="discord logo" 
+                  class="footer-discord"></a>
+                <a href="#"><img src="img/youtube-logo.png" 
+                  alt="youtube logo" 
+                  class="footer-youtube"></a>
+                <a href="#"><img src="img/twitter-logo.png" 
+                  alt="twitter logo" 
+                  class="footer-twitter"></a>
+                <a href="#"><img src="img/instagram-logo.png" 
+                  alt="instagram logo" 
+                  class="footer-instagram"></a>
               </li>
             </ul>
           </div>
@@ -143,13 +135,13 @@
                 <p class="middle-text-header">Explore</p>
               </li>
               <li class="middle-box-item">
-                <p class="middle-text-one">Marketplace</p>
+                <a href="#" class="middle-text-one">Marketplace</a>
               </li>
               <li class="middle-box-item">
-                <p class="middle-text-two">Rankings</p>
+                <a href="#" class="middle-text-two">Rankings</a>
               </li>
               <li class="middle-box-item">
-                <p class="middle-text-three">Connect a wallet</p>
+                <a href="#" class="middle-text-three">Connect a Wallet</a>
               </li>
             </ul>
           </div>
@@ -159,10 +151,10 @@
                 <p class="right-text-header">Join Our Weekly Digest</p>
               </li>
               <li class="right-box-item">
-                <p class="right-text-one">
+                <a href="#" class="right-text-one">
                   Get exclusive promotions & updates <br />
                   straight to your inbox.
-                </p>
+                </a>
               </li>
               <li class="right-box-item">
                 <div class="footer-input">
