added changes to work 1

--- a/graduation-one/index.html
+++ b/graduation-one/index.html
@@ -110,5 +110,297 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <div class="container">
+        <h2 class="main-heading">
+          Trending Collection
+        </h2>
+        <p class="main-heading-text">
+          Checkout our weekly updated trending collection.
+        </p>
+        <div class="main-box">
+          <div class="main-area">
+            <div class="main-img-dog">
+              <img src="img/dog.png" alt="dog" class="dog-glasses" />
+            </div>
+            <div class="main-small-box">
+              <div class="main-cat-small">
+                <img src="img/cat.png" alt="cat" class="cat-goggles" />
+              </div>
+              <div class="main-bear-small">
+                <img src="img/bear.png" alt="bear" class="bear-sunnies" />
+              </div>
+              <div class="main-number-area">
+                <p class="number-one">1025+</p>
+              </div>
+            </div>
+            <div class="main-nick-area">
+              <h3 class="main-nick-area-header">
+                DSGN Animals
+              </h3>
+              <div class="nick-area-box">
+                <img src="img/avatar-one.png" alt="avatar" class="avatar" />
+                <span class="avatar-name">MrFox</span>
+              </div>
+            </div>
+          </div>
+          <div class="main-area">
+            <div class="main-img-dog">
+              <img src="img/mushroom.png" alt="dog" class="dog-glasses" />
+            </div>
+            <div class="main-small-box">
+              <div class="main-cat-small">
+                <img src="img/mushroom-icon-one.png" alt="mushroom" class="cat-goggles" />
+              </div>
+              <div class="main-bear-small">
+                <img src="img/mushroom-icon-two.png" alt="mushroom" class="bear-sunnies" />
+              </div>
+              <div class="main-number-area">
+                <p class="number-one">1025+</p>
+              </div>
+            </div>
+            <div class="main-nick-area">
+              <h3 class="main-nick-area-header">
+                Magic Mushrooms
+              </h3>
+              <div class="nick-area-box">
+                <img src="img/avatar-two.png" alt="avatar" class="avatar" />
+                <span class="avatar-name">Shroomie</span>
+              </div>
+            </div>
+          </div>
+          <div class="main-area">
+            <div class="main-img-dog">
+              <img src="img/robot.png" alt="dog" class="dog-glasses" />
+            </div>
+            <div class="main-small-box">
+              <div class="main-cat-small">
+                <img src="img/robot-icon-one.png" alt="robot" class="cat-goggles" />
+              </div>
+              <div class="main-robot-small">
+                <img src="img/robot-icon-two.png" alt="robot" class="bear-sunnies" />
+              </div>
+              <div class="main-number-area">
+                <p class="number-one">1025+</p>
+              </div>
+            </div>
+            <div class="main-nick-area">
+              <h3 class="main-nick-area-header">
+                Disco Machines
+              </h3>
+              <div class="nick-area-box">
+                <img src="img/avatar-three.png" alt="avatar" class="avatar" />
+                <span class="avatar-name">BeKind2Robots</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="main-one">
+        <div class="container">
+          <h2 class="main-heading-one">
+            Top creators
+          </h2>
+          <p class="main-heading-text-one">
+            Checkout Top Rated Creators on the NFT Marketplace
+          </p>
+          <div class="boxes-cards">
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-one.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">Keepitreal
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-two.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">DigiLab
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-three.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">GravityOne
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-four.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">Juanie
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-five.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">BlueWhale
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-six.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">Mr Fox
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-seven.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">Shroomie
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-eight.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">Robotica
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-nine.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">RustyRobot
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-ten.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">Animakid
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-eleven.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">Dotgu
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+            <div class="main-one-card">
+              <div class="card">
+                <div class="main-card">
+                  <img src="img/card-twelve.png" alt="avatar" class="card-image"/>
+                </div>
+                <h3 class="card-title">Ghiblier
+                </h3>
+                <div class="under-title-text">
+                  <p class="card-text-left">
+                    Total Sales:
+                  </p>
+                  <span class="card-text-right">R34.53 ETH</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="main-two">
+        <div class="container">
+          <h2 class="main-heading-two">
+            Browse Categories
+          </h2>
+          <div class="blur-cards-box">
+            <div class="blur-card">
+              <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
