--- a/graduation-one/index.html
+++ b/graduation-one/index.html
@@ -396,6 +396,74 @@
           <div class="blur-cards-box">
             <div class="blur-card">
               <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+                <p class="header-blur-heading">
+                  Art
+                </p>
+              </div>
+              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+            </div>
+            <div class="blur-card">
+              <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+                <p class="header-blur-heading">
+                  Art
+                </p>
+              </div>
+              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+            </div>
+            <div class="blur-card">
+              <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+                <p class="header-blur-heading">
+                  Art
+                </p>
+              </div>
+              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+            </div>
+            <div class="blur-card">
+              <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+                <p class="header-blur-heading">
+                  Art
+                </p>
+              </div>
+              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+            </div>
+            <div class="blur-card">
+              <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+                <p class="header-blur-heading">
+                  Art
+                </p>
+              </div>
+              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+            </div>
+            <div class="blur-card">
+              <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+                <p class="header-blur-heading">
+                  Art
+                </p>
+              </div>
+              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+            </div>
+            <div class="blur-card">
+              <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+                <p class="header-blur-heading">
+                  Art
+                </p>
+              </div>
+              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+            </div>
+            <div class="blur-card">
+              <img src="img/blur-one.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+                <p class="header-blur-heading">
+                  Art
+                </p>
+              </div>
               <img src="img/brush.png" alt="brush" class="icon-blur"/>
             </div>
           </div>
