new section added work 2

--- a/graduation-one/index.html
+++ b/graduation-one/index.html
@@ -395,8 +395,8 @@
           </h2>
           <div class="blur-cards-box">
             <div class="blur-card">
-              <img src="img/blur-one.png" alt="whales" class="blur"/>
-              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+              <img src="img/whale.png" alt="whales" class="blur"/>
+              <div class="blur-down-text"> 
                 <p class="header-blur-heading">
                   Art
                 </p>
@@ -404,67 +404,67 @@
               <img src="img/brush.png" alt="brush" class="icon-blur"/>
             </div>
             <div class="blur-card">
-              <img src="img/blur-one.png" alt="whales" class="blur"/>
-              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+              <img src="img/monkey.png" alt="monkey" class="blur"/>
+              <div class="blur-down-text"> 
                 <p class="header-blur-heading">
-                  Art
+                  Collectibles
                 </p>
               </div>
-              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+              <img src="img/swatches.png" alt="brush" class="icon-blur"/>
             </div>
             <div class="blur-card">
-              <img src="img/blur-one.png" alt="whales" class="blur"/>
-              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+              <img src="img/violin.png" alt="violin" class="blur"/>
+              <div class="blur-down-text"> 
                 <p class="header-blur-heading">
-                  Art
+                  Music
                 </p>
               </div>
-              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+              <img src="img/music.png" alt="brush" class="icon-blur"/>
             </div>
             <div class="blur-card">
-              <img src="img/blur-one.png" alt="whales" class="blur"/>
-              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+              <img src="img/man.png" alt="man" class="blur"/>
+              <div class="blur-down-text"> 
                 <p class="header-blur-heading">
-                  Art
+                  Photography
                 </p>
               </div>
-              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+              <img src="img/camera.png" alt="brush" class="icon-blur"/>
             </div>
             <div class="blur-card">
-              <img src="img/blur-one.png" alt="whales" class="blur"/>
-              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+              <img src="img/sky.png" alt="sky" class="blur"/>
+              <div class="blur-down-text"> 
                 <p class="header-blur-heading">
-                  Art
+                  Video
                 </p>
               </div>
-              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+              <img src="img/videovamera.png" alt="brush" class="icon-blur"/>
             </div>
             <div class="blur-card">
-              <img src="img/blur-one.png" alt="whales" class="blur"/>
-              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+              <img src="img/key.png" alt="key" class="blur"/>
+              <div class="blur-down-text"> 
                 <p class="header-blur-heading">
-                  Art
+                  Utility
                 </p>
               </div>
-              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+              <img src="img/wand.png" alt="brush" class="icon-blur"/>
             </div>
             <div class="blur-card">
-              <img src="img/blur-one.png" alt="whales" class="blur"/>
-              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+              <img src="img/ball.png" alt="ball" class="blur"/>
+              <div class="blur-down-text"> 
                 <p class="header-blur-heading">
-                  Art
+                  Sport
                 </p>
               </div>
-              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+              <img src="img/basketball.png" alt="brush" class="icon-blur"/>
             </div>
             <div class="blur-card">
-              <img src="img/blur-one.png" alt="whales" class="blur"/>
-              <div class="blur-down-text"> <!-- Move blur-down-text inside blur-card -->
+              <img src="img/bulding.png" alt="building" class="blur"/>
+              <div class="blur-down-text">
                 <p class="header-blur-heading">
-                  Art
+                  Virtual Worlds
                 </p>
               </div>
-              <img src="img/brush.png" alt="brush" class="icon-blur"/>
+              <img src="img/planet.png" alt="brush" class="icon-blur"/>
             </div>
           </div>
         </div>
